# ctrunner.org

./: Cargo.toml  Dockerfile  README.md  dev.sh  server-setup.sh
.github/workflows/: deploy.yml
migrations/: 20250820223140_create_counties_table.sql  20250820223147_create_towns_table.sql  20250920223147_create_users_table.sql  20251201153428_create_completed_towns_table.sql  20251201155000_create_races_table.sql  20251201155552_create_race_results_table.sql
public/scripts/: common.js  dropdown.js  fill-map.js  select-race.js  select-theme.js  tooltips.js
public/styles/: main.css  secondary.css
src/: lib.rs  main.rs
src/application/: mod.rs  race_service.rs  town_service.rs  user_service.rs
src/domain/: distance.rs  google_sheet.rs  mod.rs  race.rs  rbac.rs  town.rs  user.rs
src/extract/: admin_user.rs  current_user.rs  maybe_current_user.rs  mod.rs  no_user.rs  orphan_user.rs
src/filters/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: mod.rs  (+3 more)
src/routes/: admin.rs  auth.rs  homepage.rs  members.rs  mod.rs  payments.rs  races.rs  submit_town.rs  webhooks.rs
src/util/: mod.rs  pagination.rs  validation.rs
templates/: 404.html  completed_towns_map.html  dashboard.html  homepage.html  submit_town.html  update_runner_info.html
templates/_partials/: app_drawer.html  footer.html  navbar.html  scripts.html
templates/admin/: users.html  view_user.html
templates/members/: members.html  profile_page.html
templates/races/: add_upcoming.html  upcoming.html
templates/submit_town/: race_autocomplete.html  submit_town.html
(+1 files in other folders)
