[package]
name = "ctrunner"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie", "form", "query"] }
chrono = { version = "0.4.42", features = ["clock"] }
chrono-tz = "0.10.4"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
log = "0.4.28"
oauth2 = "5.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.226"
serde_json = "1.0.145"
simple_logger = "5.0.0"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "runtime-tokio-native-tls",
  "sqlite",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tower-http = { version = "0.6.6", features = [
  "compression-full",
  "fs",
  "set-header",
] }
